[gd_scene load_steps=18 format=2]

[ext_resource path="res://Cocina/Libro.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Libro.PNG" type="Texture" id=2]
[ext_resource path="res://Sprites/Tomate/Tomate cortado.PNG" type="Texture" id=3]
[ext_resource path="res://Sprites/Lechuga/Lechuga cortada.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tomate/Tomate cocido.PNG" type="Texture" id=5]
[ext_resource path="res://Sprites/Lechuga/Lechuga5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Tomate/Tomate5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Fresa/Fresa Cocida.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Maiz/Maiz cocido.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Arroz/Arroz cocido.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Acelga/Acelga5.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Maiz/Maiz5.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Arroz/Arroz5.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Fresa/Fresa5.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Acelga/Acelga cortada.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Fresa/Fresa Cortada.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Sprite" type="Sprite"]
position = Vector2( 56.4164, 31.1217 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Ingrediente_1" type="AnimatedSprite" parent="."]
position = Vector2( -7.36653, -4.78701 )
scale = Vector2( 0.332795, 0.332795 )
frames = SubResource( 1 )

[node name="Ingrediente_2" type="AnimatedSprite" parent="."]
position = Vector2( -6.9494, 3.30546 )
scale = Vector2( 0.332795, 0.332795 )
frames = SubResource( 1 )

[node name="Ingrediente_3" type="AnimatedSprite" parent="."]
position = Vector2( 6.64928, -4.11959 )
scale = Vector2( 0.332795, 0.332795 )
frames = SubResource( 1 )
